--- a/PokemonPartySimulator/PokemonPartySimulator.csproj
+++ b/PokemonPartySimulator/PokemonPartySimulator.csproj
@@ -69,6 +69,12 @@
     <Compile Include="Presentation Layer\frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="Presentation Layer\frmMoveSelect.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentation Layer\frmMoveSelect.Designer.cs">
+      <DependentUpon>frmMoveSelect.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentation Layer\frmPokemonSelect.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,11 +104,17 @@
     <EmbeddedResource Include="Presentation Layer\frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Presentation Layer\frmMoveSelect.resx">
+      <DependentUpon>frmMoveSelect.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Presentation Layer\frmPokemonSelect.resx">
       <DependentUpon>frmPokemonSelect.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Presentation Layer\frmTeamEditor.resx">
       <DependentUpon>frmTeamEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Presentation Layer\frmTeamLoad.resx">
+      <DependentUpon>frmTeamLoad.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
